--- a/build.yaml
+++ b/build.yaml
@@ -12,9 +12,9 @@
 #     shield: reviung41
 ---
 include:
-  - board: nice_nano_v2
+  - board: nice_nano@2.0.0
     shield: dactyl_manuform_5x6_left
-  - board: nice_nano_v2
+  - board: nice_nano@2.0.0
     shield: dactyl_manuform_5x6_right
-  - board: nice_nano_v2
+  - board: nice_nano@2.0.0
     shield: settings_reset
